Added QR code to daemon for non-Docker instances which can be scanned via the Android app to set up a new server. Additionally, fixed several compilation issues that could cause issues when running signet-ui via pnpm.

--- a/apps/signet-android/app/src/main/AndroidManifest.xml
+++ b/apps/signet-android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <!-- Network access -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Camera for QR code scanning -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
     <!-- Foreground service for SSE connection -->
     <uses-permission
         android:name="android.permission.FOREGROUND_SERVICE"
