--- a/apps/signet/package.json
+++ b/apps/signet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signet",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Signet - Modern NIP-46 remote signer",
   "main": "dist/index.js",
   "bin": {
@@ -61,6 +61,7 @@
     "isomorphic-ws": "^5.0.0",
     "nostr-tools": "^2.17.0",
     "prisma": "^7.2.0",
+    "qrcode": "^1.5.4",
     "websocket-polyfill": "^0.0.3",
     "ws": "^8.18.3",
     "yargs": "^17.7.2"
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/node": "^20.19.0",
+    "@types/qrcode": "^1.5.6",
     "@vitest/coverage-v8": "^4.0.16",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
