Added admin event logging to track key lock/unlock, app suspend/resume, etc. Improved pool tracking to prevent stale SSE connections from not restarting during long sleep/wake cycles. Replaced relays widget with system status widget. Added option kill switch to send daemon commands via NIP-04 and NIP-17 DMs from user-defined admin npub. Updated documentation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       SIGNET_HOST: ${SIGNET_HOST:-0.0.0.0}
       EXTERNAL_URL: ${EXTERNAL_URL:-http://localhost:4174}
     ports:
-      - "${SIGNET_PORT:-3000}:3000"
+      - "${SIGNET_PORT:-3000}:${SIGNET_PORT:-3000}"
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:3000/health >/dev/null 2>&1 || exit 1"]
+      test: ["CMD-SHELL", "wget -qO- http://localhost:${SIGNET_PORT:-3000}/health >/dev/null 2>&1 || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 6
@@ -35,6 +35,6 @@ services:
     environment:
       UI_PORT: ${UI_PORT:-4174}
       UI_HOST: ${UI_HOST:-0.0.0.0}
-      DAEMON_URL: ${DAEMON_URL:-http://signet:3000}
+      DAEMON_URL: ${DAEMON_URL:-http://signet:${SIGNET_PORT:-3000}}
     ports:
       - "${UI_PORT:-4174}:${UI_PORT:-4174}"
